--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
         android:layout_marginEnd="112dp"
         android:layout_marginStart="112dp"
         android:layout_marginTop="91dp"
+        android:onClick="loginpage"
         android:text="Login to Facebook"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
